:zap: Try push flag

--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ release {
   preTagCommitMessage = ':octocat: prepare'
   tagCommitMessage = ':octocat: tag'
   newVersionCommitMessage = ':octocat: bump to'
+  git.pushToRemote = project.hasProperty('push')
 }
