--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ allprojects  {
   apply plugin: 'maven'
   apply plugin: 'nebula.provided-base'
   apply plugin: 'nebula.optional-base'
-  apply from: '../gradle/nexus.gradle'
-  apply from: '../gradle/docs.gradle'
+  apply from: "${rootProject.projectDir}/gradle/nexus.gradle"
+  apply from: "${rootProject.projectDir}/gradle/docs.gradle"
 
   group = 'com.github.tony19'
   version = "${version}"
@@ -43,8 +43,8 @@ allprojects  {
 }
 
 subprojects {
-  apply from: '../gradle/analysis.gradle'
-  apply from: '../gradle/license.gradle'
+  apply from: "${rootProject.projectDir}/gradle/analysis.gradle"
+  apply from: "${rootProject.projectDir}/gradle/license.gradle"
 
   sourceCompatibility = 1.5
   targetCompatibility = 1.5
