:zap: Reconfig commit messages for release

--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,8 @@ project.ext.FileUtils = org.apache.commons.io.FileUtils
 
 release {
   tagTemplate = 'v_${version}' // must be single-quotes
-  preTagCommitMessage = ':octocat: release'
-  tagCommitMessage = ':octocat:'
-  newVersionCommitMessage = ':octocat: bump to'
+  preTagCommitMessage = ':cloud: Release'
+  newVersionCommitMessage = ':cloud: Bump'
 }
 
 allprojects  {
