--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,24 @@
 # https://circleci.com/gh/tony19/logback-android
 version: 2.1
 
-executors:
-  android28:
-    docker:
-      - image: circleci/android:api-28
-    working_directory: ~/code
-    environment:
-      JVM_OPTS: -Xmx3200m
+orbs:
+  android: circleci/android@0.2.1
 
 jobs:
   build:
-    executor: android28
+    executor: android/android
+    working_directory: ~/code
     steps:
       - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "logback-android/build.gradle" }}
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "logback-android/build.gradle" }}
+#      - restore_cache:
+#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "logback-android/build.gradle" }}
+#      - run:
+#          name: Download Dependencies
+#          command: ./gradlew androidDependencies
+#      - save_cache:
+#          paths:
+#            - ~/.gradle
+#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "logback-android/build.gradle" }}
       - run:
           name: Assemble outputs
           command: ./gradlew assembleDebug assembleRelease --parallel
@@ -36,7 +32,8 @@ jobs:
           destination: outputs
 
   lint:
-    executor: android28
+    executor: android/android
+    working_directory: ~/code
     steps:
       - attach_workspace:
           at: ~/code
@@ -44,11 +41,12 @@ jobs:
           name: Lint
           command: ./gradlew lint --parallel
       - store_artifacts:
-          path: logback-android/build/reports/lint-results*
+          path: logback-android/build/reports/lint-results.html
           destination: reports
 
   test:
-    executor: android28
+    executor: android/android
+    working_directory: ~/code
     steps:
       - attach_workspace:
           at: ~/code
@@ -62,7 +60,13 @@ jobs:
           path: logback-android/build/test-results
 
   test_app:
-    executor: android28
+    parameters:
+      sdk:
+        type: string
+    executor:
+      name: android/android
+      sdk-version: << parameters.sdk >>
+    working_directory: ~/code
     steps:
       - attach_workspace:
           at: ~/code
@@ -90,3 +94,6 @@ workflows:
       - test_app:
           requires:
             - build
+          matrix:
+            parameters:
+              sdk: ['23', '24', '25', '26', '27', '28', '29']
