ci: circleci workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
           command: mkdir -p logback-test-app/app/libs && cp logback-android/build/outputs/aar/logback-android-release.aar logback-test-app/app/libs/.
       - run:
           name: Test app
-          command: cd logback-test-app && ./gradlew test
+          command: cd logback-test-app && ./gradlew test connectedCheck
 
 workflows:
   version: 2
